main/default/objects/TriggerSettings__c/fields/BypassAccountLocationTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassAccountLocationTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAccountLocationTrigger</label>
    <type>Checkbox</type>
</CustomField>