main/default/objects/TriggerSettings__c/fields/BypassAccountLossDetailTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassAccountLossDetailTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAccountLossDetailTrigger</label>
    <type>Checkbox</type>
</CustomField>