main/default/objects/TriggerSettings__c/fields/BypassAccountProductTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassAccountProductTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAccountProductTrigger</label>
    <type>Checkbox</type>
</CustomField>