main/default/objects/TriggerSettings__c/fields/BypassAccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassAccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAccountTrigger</label>
    <type>Checkbox</type>
</CustomField>