main/default/objects/TriggerSettings__c/fields/BypassAdditionalInsuredTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassAdditionalInsuredTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAdditionalInsuredTrigger</label>
    <type>Checkbox</type>
</CustomField>