main/default/objects/TriggerSettings__c/fields/BypassAdditionalInterestTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassAdditionalInterestTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAdditionalInterestTrigger</label>
    <type>Checkbox</type>
</CustomField>