main/default/objects/TriggerSettings__c/fields/BypassAgencyLicenseTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassAgencyLicenseTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassAgencyLicenseTrigger</label>
    <type>Checkbox</type>
</CustomField>