main/default/objects/TriggerSettings__c/fields/BypassBrokerAccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassBrokerAccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassBrokerAccountTrigger</label>
    <type>Checkbox</type>
</CustomField>