main/default/objects/TriggerSettings__c/fields/BypassBrokerLicenseTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassBrokerLicenseTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassBrokerLicenseTrigger</label>
    <type>Checkbox</type>
</CustomField>