main/default/objects/TriggerSettings__c/fields/BypassClaimDataTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassClaimDataTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassClaimDataTrigger</label>
    <type>Checkbox</type>
</CustomField>