main/default/objects/TriggerSettings__c/fields/BypassContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassContactTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassContactTrigger</label>
    <type>Checkbox</type>
</CustomField>