main/default/objects/TriggerSettings__c/fields/BypassContentDocumentLinkTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassContentDocumentLinkTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassContentDocumentLinkTrigger</label>
    <type>Checkbox</type>
</CustomField>