main/default/objects/TriggerSettings__c/fields/BypassContractTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassContractTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassContractTrigger</label>
    <type>Checkbox</type>
</CustomField>