main/default/objects/TriggerSettings__c/fields/BypassCoverageLineItemTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassCoverageLineItemTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassCoverageLineItemTrigger</label>
    <type>Checkbox</type>
</CustomField>