main/default/objects/TriggerSettings__c/fields/BypassCoverageTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassCoverageTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassCoverageTrigger</label>
    <type>Checkbox</type>
</CustomField>