main/default/objects/TriggerSettings__c/fields/BypassDocumentRevisionTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassDocumentRevisionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassDocumentRevisionTrigger</label>
    <type>Checkbox</type>
</CustomField>