main/default/objects/TriggerSettings__c/fields/BypassFreeFormEndorsementTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassFreeFormEndorsementTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassFreeFormEndorsementTrigger</label>
    <type>Checkbox</type>
</CustomField>