main/default/objects/TriggerSettings__c/fields/BypassLimitDeductibleTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassLimitDeductibleTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassLimitDeductibleTrigger</label>
    <type>Checkbox</type>
</CustomField>