main/default/objects/TriggerSettings__c/fields/BypassLocationTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassLocationTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassLocationTrigger</label>
    <type>Checkbox</type>
</CustomField>