main/default/objects/TriggerSettings__c/fields/BypassOpportunityProductTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityProductTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassOpportunityProductTrigger</label>
    <type>Checkbox</type>
</CustomField>