main/default/objects/TriggerSettings__c/fields/BypassOpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassOpportunityTrigger</label>
    <type>Checkbox</type>
</CustomField>