main/default/objects/TriggerSettings__c/fields/BypassPolicyTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassPolicyTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassPolicyTrigger</label>
    <type>Checkbox</type>
</CustomField>