main/default/objects/TriggerSettings__c/fields/BypassProductTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassProductTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassProductTrigger</label>
    <type>Checkbox</type>
</CustomField>