main/default/objects/TriggerSettings__c/fields/BypassQuoteLineItemTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassQuoteLineItemTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassQuoteLineItemTrigger</label>
    <type>Checkbox</type>
</CustomField>