main/default/objects/TriggerSettings__c/fields/BypassQuoteLocationTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassQuoteLocationTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassQuoteLocationTrigger</label>
    <type>Checkbox</type>
</CustomField>