main/default/objects/TriggerSettings__c/fields/BypassQuoteOptionTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassQuoteOptionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassQuoteOptionTrigger</label>
    <type>Checkbox</type>
</CustomField>