main/default/objects/TriggerSettings__c/fields/BypassQuoteProcessTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassQuoteProcessTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassQuoteProcessTrigger</label>
    <type>Checkbox</type>
</CustomField>