main/default/objects/TriggerSettings__c/fields/BypassQuoteTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassQuoteTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassQuoteTrigger</label>
    <type>Checkbox</type>
</CustomField>