main/default/objects/TriggerSettings__c/fields/BypassRatingModifierFactorTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassRatingModifierFactorTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassRatingModifierFactorTrigger</label>
    <type>Checkbox</type>
</CustomField>