main/default/objects/TriggerSettings__c/fields/BypassRatingModifiersTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassRatingModifiersTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassRatingModifiersTrigger</label>
    <type>Checkbox</type>
</CustomField>