main/default/objects/TriggerSettings__c/fields/BypassRenewalTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassRenewalTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassRenewalTrigger</label>
    <type>Checkbox</type>
</CustomField>