main/default/objects/TriggerSettings__c/fields/BypassSanctionStatusTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassSanctionStatusTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassSanctionStatusTrigger</label>
    <type>Checkbox</type>
</CustomField>