main/default/objects/TriggerSettings__c/fields/BypassSubjectivityTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassSubjectivityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassSubjectivityTrigger</label>
    <type>Checkbox</type>
</CustomField>